# django-blog

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  entrypoint.sh  pyproject.toml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/comments/: handlers.py  schemas.py
core/api/v1/notifications/: handlers.py  schemas.py
core/api/v1/posts/: filters.py  handlers.py  handlers.test.py  schemas.py
core/api/v1/users/: filters.py  follow_handlers.py  handlers.py  login.py  schemas.py
core/api/v1/users/handlers/: auth.py  following.py  handlers.py
core/api/v1/users/schemas/: jwt.py  schemas.py
core/apps/common/: enums.py  exception.py  models.py
core/apps/notifications/: admin.py  apps.py  entities.py  models.py  signals.py  tasks.py
core/apps/notifications/services/: notification.py
core/apps/posts/: admin.py  apps.py  containers.py  models.py
core/apps/posts/entities/: comment_likes.py  comments.py  post_likes.py  posts.py
core/apps/posts/exeptions/: comment.py  comment_like.py  post_like.py  posts.py
core/apps/posts/filters/: posts.py
core/apps/posts/services/: comment_likes.py  comments.py  post_likes.py  posts.py
core/apps/users/: admin.py  authentication.py  entities.py  models.py  tasks.py
core/apps/users/exceptions/: codes.py  following.py  user.py
core/apps/users/services/: auth.py  codes.py  follow.py  senders.py  users.py
core/project/: celery.py  containers.py  urls.py
core/project/settings/: local_example.py  main.py
docker_compose/: app.yaml  storages.yaml
tests/factories/: posts.py  users.py
tests/services/: conftest.py  test_post.py
(+2 files in other folders)
